# serializer version: 1
# name: test_button_entities_snapshot[platforms0][button.device_1_mute-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.device_1_mute',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mute',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mute',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mute',
    'unique_id': 'd1$mute',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_entities_snapshot[platforms0][button.device_1_mute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Mute',
    }),
    'context': <ANY>,
    'entity_id': 'button.device_1_mute',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_entities_snapshot[platforms0][button.device_1_ptz_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.device_1_ptz_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ up',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ptz_up',
    'unique_id': 'd1$ptz_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_entities_snapshot[platforms0][button.device_1_ptz_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 PTZ up',
    }),
    'context': <ANY>,
    'entity_id': 'button.device_1_ptz_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_entities_snapshot[platforms0][button.device_1_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.device_1_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Restart',
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'd1$restart_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_entities_snapshot[platforms0][button.device_1_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'restart',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Restart',
    }),
    'context': <ANY>,
    'entity_id': 'button.device_1_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
